2006-05-21 François Proulx <francois.proulx@gmail.com> 	* Think I've fixed Google Maps on IE. 		* need to test on another system..

--- a/wifidog/media/base_theme/stylesheet.css
+++ b/wifidog/media/base_theme/stylesheet.css
@@ -317,7 +317,7 @@ body div#toolTip {
 	-webkit-border-radius:5px;
 	-moz-border-radius:5px;
 }
-body div#toolTip p { margin:0;padding:0;color:#fff;font:11px/12px; }
+body div#toolTip p { margin:0;padding:0;color:#fff;font-size:12px; }
 body div#toolTip p em { display:block;margin-top:3px;color:#f60;font-style:normal;font-weight:bold; }
 body div#toolTip p em span { font-weight:bold;color:#fff; }
 
@@ -385,32 +385,16 @@ body div#toolTip p em span { font-weight:bold;color:#fff; }
 }
 .admin_section_tools { display: inline;}
 
-.admin_section_list { /* list of elements inside a section */
-	display: compact;
-}
-/*.admin_section_list_item { display: inline; }*/
-.admin_section_list_item { display: compact; }
-/*.user_ui_main {
-	border: 1px solid gray;
-	margin: 2px;
-	float: left;
-	display: inline;
-	padding: 2px;
-}*/
 .admin_section_button {
     border: 1px solid #daedd8;
     margin-left: 2px;
     margin-bottom: -5px;
     padding: 2px;
     padding-top: 1px;
-    filter: alpha(opacity=70);
-    -moz-opacity: 0.70;
 }
 .admin_section_button:hover {
     border : 1px solid #46a43a;
     background-color: #daedd8;
-    filter: alpha(opacity=100);
-    -moz-opacity: 1.00;
 }
 .admin_section_button_disabled {
     border: 1px solid #daedd8;
@@ -418,8 +402,6 @@ body div#toolTip p em span { font-weight:bold;color:#fff; }
     margin-bottom: -5px;
     padding: 2px;
     padding-top: 1px;
-    filter: gray() alpha(opacity=30);
-    -moz-opacity: 0.30;
 }
 
 .generic_object_admin_edit input {
@@ -745,6 +727,11 @@ fieldset .red {
 
 /********** Google map section **********/
 
+/* crappy IE VML hack */
+v\:* {
+	behavior:url(#default#VML);
+}
+
 #map_title {
     background-color: #E9F6FF;
     border: 1px solid #B4DFFF;
@@ -827,7 +814,6 @@ table.scrollable {
     border-spacing: 0px;
 }
 table.scrollable thead th {
-    display:inline-block;
     font-weight: bold;
     text-align: center;
     border-top: solid 2px #000000;
